初めてのコンパイル

--- a/test.tex
+++ b/test.tex
@@ -10,11 +10,11 @@
 
 \begin{document}
 
-\title{}
+\title{こんにちわ}
 \author{}
 \date{\today}
 \maketitle
-
+Cannot view file PDF file. File not foundCannot view file PDF file. File not foundCannot view file PDF file. File not foundCannot view file PDF file. File not foundCannot view file PDF file. File not foundCannot view file PDF file. File not foundCannot view file PDF file. File not found
 
 
 
