--- a/learning.tex
+++ b/learning.tex
@@ -2,5 +2,18 @@
 \begin{document}
 \title{練習１}
 
-複素関数\[f(z)=f(x+iy)=u(x,y)+iv(x,y)\]が点\[z_0=x_0+iy_0\]において正則であるための必要十分条件は，\[z_0\]のある\[ε\]近傍\[Δ(z_0,ε)\]において以下のコーシー・リーマン方程式を満たすことである。
+複素関数$f(z)=f(x+iy)=u(x,y)+iv(x,y)$が点$z_0=x_0+iy_0$におい
+て正則であるための必要十分条件は，$z_0$のある$ε$近傍$Δ(z_0,ε)$において以下のコーシー・リーマン方程式を満たすことである。
+
+\[\frac{\delta u}{\delta x}=\frac{\delta v}{\delta y}\]
+\[\frac{\delta u}{\delta y}=-\frac{\delta v}{\delta x}\]
+
+
+\title{練習２}
+$c(t)=(x(t),y(t),z(t))$によって与えられる空間曲線$c$の$c(0)$を始点として$c(t)$までの弧長を$s(t)$とすると
+
+\[s(t)=\int_{0}^{t} \sqrt{\Big(\frac{dx}{dt}\Big)^2 + (\frac{dy}{dt})^2 + (\frac{dz}{dt})^2} dt\]
+
+と表される。
+
 \end{document}
